--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:studio": "dotenv -e .env.local -- drizzle-kit studio",
     "test:db:generate": "dotenv -e .env.test.local -- drizzle-kit generate",
     "test:db:migrate": "dotenv -e .env.test.local -- drizzle-kit migrate",
+    "test:db:studio": "dotenv -e .env.test.local -- drizzle-kit studio",
     "test:setup": "npm run test:db:migrate && npm run test:seed",
     "test:seed": "dotenv -e .env.test.local -- tsx scripts/seed-test-data.ts",
     "test:clean": "dotenv -e .env.test.local -- tsx scripts/clean-test-data.ts",
@@ -22,6 +23,12 @@
     "test:watch": "dotenv -e .env.test.local -- jest --config=jest.config.mjs --watch",
     "db:drop": "dotenv -e .env.local -- tsx scripts/drop-tables.ts",
     "test:db:drop": "dotenv -e .env.test.local -- tsx scripts/drop-tables.ts",
+    "check:subscription": "dotenv -e .env.test.local -- tsx scripts/check-subscription-status.ts",
+    "debug:plan": "dotenv -e .env.test.local -- tsx scripts/debug-plan-lookup.ts",
+    "reprocess:webhooks": "dotenv -e .env.test.local -- tsx scripts/reprocess-webhooks.ts",
+    "debug:webhooks": "dotenv -e .env.test.local -- tsx scripts/debug-webhooks.ts",
+    "fix:alice": "dotenv -e .env.test.local -- tsx scripts/fix-alice-subscription.ts",
+    "fix:cancelled": "dotenv -e .env.test.local -- tsx scripts/fix-cancelled-users.ts",
     "ngrok:setup": "./scripts/ngrok-setup.sh"
   },
   "dependencies": {
