--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "debug:webhooks": "dotenv -e .env.test.local -- tsx scripts/debug-webhooks.ts",
     "fix:alice": "dotenv -e .env.test.local -- tsx scripts/fix-alice-subscription.ts",
     "fix:cancelled": "dotenv -e .env.test.local -- tsx scripts/fix-cancelled-users.ts",
+    "grant:pro": "dotenv -e .env.local -- tsx scripts/grant-pro.ts",
     "ngrok:setup": "./scripts/ngrok-setup.sh"
   },
   "dependencies": {
@@ -63,6 +64,8 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^1.0.4",
+    "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.11",
     "@types/pg": "^8.15.4",
     "class-variance-authority": "^0.7.1",
@@ -85,9 +88,12 @@
     "react-hook-form": "^7.59.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.5.1",
+    "resend": "^6.7.0",
     "sonner": "^2.0.7",
+    "svix": "^1.84.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "vanilla-cookieconsent": "^3.1.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
